--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,29 +7,49 @@ on:
     branches: [ "main" ]
         
 jobs:
-    build:
-        runs-on: ubuntu-latest 
+  test:
+    name: Test Application
+    runs-on: ubuntu-latest 
+    steps:
+      
+    - name: Set up Go 1.x 
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.20.3
+
+    - name: Check out code into the Go module directory ❹
+      uses: actions/checkout@v2
+
+    - name: Downloads
+      run: go get -t ./...
+
+    - name: Run Test
+      run: go test ./...
+
+  build:
+    name: Build App
+    runs-on: ubuntu-latest
+    needs: test 
+    steps:
+         
+      - name: Set up Go 1.x 
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.20.3
+                      
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
         
-        steps:
+      - name: Build
+        run: make build
         
-        - name: Set up Go 1.x 
-          uses: actions/setup-go@v2
-          with:
-            go-version: ^1.20.3
-                        
-        - name: Check out code into the Go module directory
-          uses: actions/checkout@v2
+      - name: Copy Files
+        run: |
+          mkdir artifacts
+          cp api artifacts/.
           
-        - name: Build
-          run: make build
-          
-        - name: Copy Files
-          run: |
-            mkdir artifacts
-            cp api artifacts/.
-            
-        - name: Archive
-          uses: actions/upload-artifact@v2
-          with:
-            name: api
-            path: artifacts
+      - name: Archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: api
+          path: artifacts
