--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,20 +11,37 @@ jobs:
     name: Test Application
     runs-on: ubuntu-latest 
     steps:
-      
+
     - name: Set up Go 1.x 
       uses: actions/setup-go@v2
       with:
         go-version: ^1.20.3
 
-    - name: Check out code into the Go module directory ❹
+    - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
     - name: Downloads
       run: go get -t ./...
 
     - name: Run Test
-      run: go test ./...
+      run: make test
+
+    - name: Coverage Check
+      run: make coverage
+
+    - name: Generate Report
+      run: make report
+
+    - name: Copy Files
+      run: |
+        mkdir reports
+        cp cover.xhtml reports/.
+
+    - name: Archive
+      uses: actions/upload-artifact@v2
+      with:
+        name: reports
+        path: reports
 
   build:
     name: Build App
