--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -91,8 +91,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: 1-${{ github.ref }}
+          release_name: Release 1-${{ github.ref }}
           body: |
             Still in experimentation phase
             draft: true
