--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -108,3 +108,26 @@ jobs:
           asset_path: api
           asset_name: api
           asset_content_type: application/octet-stream
+
+  deploy-function:
+    name: Deploy FaaS
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Deploy function
+        id: deploy
+        uses: google-github-actions/deploy-cloud-functions@main
+        with:
+          name: translate
+          entry_point: Translate
+          runtime: go116
+          credentials: ${{ secrets.gcp_credentials }}
+      - id: test
+        run: curl "${{ steps.deploy.outputs.url }}/hello" 
