--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -129,6 +129,6 @@ jobs:
           entry_point: Translate
           runtime: go116
           project_id: hello-api-395906
-          env_vars: 'GCP_CREDENTIALS=${{ secrets.GCP_CREDENTIALS }}'
+          service_account_email: hello-api@hello-api-395906.iam.gserviceaccount.com
       - id: test
         run: curl "${{ steps.deploy.outputs.url }}/hello" 
