--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -121,6 +121,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Google auth
+        id: auth
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
       - name: Deploy function
         id: deploy
         uses: google-github-actions/deploy-cloud-functions@main
@@ -129,6 +135,5 @@ jobs:
           entry_point: Translate
           runtime: go116
           project_id: hello-api-395906
-          service_account_email: hello-api@hello-api-395906.iam.gserviceaccount.com
       - id: test
         run: curl "${{ steps.deploy.outputs.url }}/hello" 
