--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -109,13 +109,43 @@ jobs:
           asset_name: api
           asset_content_type: application/octet-stream
 
-  deploy-function:
-    name: Deploy FaaS
+  # deploy-function:
+  #   name: Deploy FaaS
+  #   runs-on: ubuntu-latest
+  #   needs: test
+  #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+
+  #   steps:
+  #     - name: Check out code into the Go module directory
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+
+  #     - name: Google auth
+  #       id: auth
+  #       uses: google-github-actions/auth@v0
+  #       with:
+  #         credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+  #     - name: Deploy function
+  #       id: deploy
+  #       uses: google-github-actions/deploy-cloud-functions@main
+  #       with:
+  #         name: translate
+  #         entry_point: Translate
+  #         runtime: go116
+  #         project_id: hello-api-395906
+  #         service_account_email: hello-api@hello-api-395906.iam.gserviceaccount.com
+  #     - id: test
+  #       run: curl "${{ steps.deploy.outputs.url }}/hello"
+
+  deploy-paas:
+    name: Deploy PaaS
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
     steps:
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
         with:
@@ -127,14 +157,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-      - name: Deploy function
+      - name: Deploy App
         id: deploy
-        uses: google-github-actions/deploy-cloud-functions@main
+        uses: google-github-actions/deploy-appengine@main
         with:
-          name: translate
-          entry_point: Translate
-          runtime: go116
           project_id: hello-api-395906
-          service_account_email: hello-api@hello-api-395906.iam.gserviceaccount.com
       - id: test
-        run: curl "${{ steps.deploy.outputs.url }}/hello"
+        run: curl "${{ steps.deploy.outputs.url }}/translate/hello"
