--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -8,6 +8,8 @@ on:
         
 jobs:
   test:
+    needs:
+      - format-check 
     name: Test Application
     runs-on: ubuntu-latest 
     steps:
@@ -164,3 +166,19 @@ jobs:
           project_id: hello-api-395906
       - id: test
         run: curl "${{ steps.deploy.outputs.url }}/translate/hello"
+
+  format-check:
+    name: Check formatting
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.18
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Run Format Check
+        run: make check-format
