--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -161,7 +161,7 @@ jobs:
 
       - name: Deploy App
         id: deploy
-        uses: google-github-actions/deploy-appengine@main
+        uses: google-github-actions/deploy-appengine@v1
         with:
           project_id: hello-api-395906
       - id: test
