--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -45,6 +45,9 @@ jobs:
         name: reports
         path: reports
 
+    - name: Vet
+      run: go vet ./...
+
   build:
     name: Build App
     runs-on: ubuntu-latest
@@ -110,6 +113,18 @@ jobs:
           asset_path: api
           asset_name: api
           asset_content_type: application/octet-stream
+
+  vet:
+    name: Check formatting
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.20.3
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
   # deploy-function:
   #   name: Deploy FaaS
